--- a/Spoken language identification/templates/index.html
+++ b/Spoken language identification/templates/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="static/styles/mystyle.css">
     </head>
 <body>
-    <h1>Language Detection from Speech Task</h1>
+    <h1>Language Detection from Speech</h1>
 	<div class="fullscreen nopadding">
       <div id="semitrans">
         <img src="https://zaka.ai/wp-content/themes/zaka/dist/img/svg/icons/nav-logo.svg" width="150px" />
